Fix visible horizontal scrollbar

--- a/wordpress/wp-content/themes/bluearrow/assets/styles/_header.scss
+++ b/wordpress/wp-content/themes/bluearrow/assets/styles/_header.scss
@@ -27,7 +27,7 @@ nav {
   &.navbar-static-top {
       position: absolute;
       top: 0;
-      left: 0;
+      left: -5px;
       width: 100%;
   }
 
